--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
 		"bcrypt": "^5.1.0",
 		"class-transformer": "^0.5.1",
 		"jsonwebtoken": "^9.0.0",
+		"listr": "^0.14.3",
 		"lodash": "^4.17.21",
 		"luxon": "^3.3.0",
 		"mongoose": "^7.2.3",
+		"nest-commander": "^3.7.1",
 		"passport": "^0.6.0",
 		"passport-jwt": "^4.0.1",
 		"passport-local": "^1.0.0",
@@ -41,6 +43,7 @@
 		"rxjs": "^7.2.0",
 		"strongly-typed-events": "^3.0.9",
 		"tslib": "^2.5.3",
+		"winston": "^3.9.0",
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
