--- a/package.json
+++ b/package.json
@@ -1,111 +1,113 @@
 {
-	"name": "@open-press/backend",
-	"version": "0.0.1",
-	"description": "",
-	"author": "",
-	"private": true,
-	"license": "UNLICENSED",
-	"type": "commonjs",
-	"scripts": {
-		"build": "nest build",
-		"format": "prettier --write \"src/**/*.ts\" \"libs/**/*.ts\"",
-		"start": "nest start",
-		"start:dev": "nest start --watch",
-		"start:debug": "nest start --debug --watch",
-		"start:prod": "node dist/main",
-		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-		"test": "jest --forceExit",
-		"test:watch": "jest --watch",
-		"test:cov": "jest --coverage --forceExit",
-		"test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
-	},
-	"dependencies": {
-		"@nestjs/common": "^9.0.0",
-		"@nestjs/config": "^2.3.3",
-		"@nestjs/core": "^9.0.0",
-		"@nestjs/jwt": "^10.0.3",
-		"@nestjs/mapped-types": "^1.2.2",
-		"@nestjs/mongoose": "^9.2.2",
-		"@nestjs/passport": "^9.0.3",
-		"@nestjs/platform-express": "^9.0.0",
-		"bcrypt": "^5.1.0",
-		"class-transformer": "^0.5.1",
-		"jsonwebtoken": "^9.0.0",
-		"listr": "^0.14.3",
-		"lodash": "^4.17.21",
-		"luxon": "^3.3.0",
-		"mongoose": "^7.2.3",
-		"nest-commander": "^3.7.1",
-		"passport": "^0.6.0",
-		"passport-jwt": "^4.0.1",
-		"passport-local": "^1.0.0",
-		"reflect-metadata": "^0.1.13",
-		"rxjs": "^7.2.0",
-		"strongly-typed-events": "^3.0.9",
-		"tslib": "^2.5.3",
-		"winston": "^3.9.0",
-		"zod": "^3.21.4"
-	},
-	"devDependencies": {
-		"@faker-js/faker": "^8.0.2",
-		"@nestjs/cli": "^9.0.0",
-		"@nestjs/schematics": "^9.0.0",
-		"@nestjs/testing": "^9.0.0",
-		"@types/bcrypt": "^5.0.0",
-		"@types/express": "^4.17.13",
-		"@types/jest": "29.5.2",
-		"@types/jsonwebtoken": "^9.0.2",
-		"@types/listr": "^0.14.4",
-		"@types/lodash": "^4.14.195",
-		"@types/luxon": "^3.3.0",
-		"@types/node": "20.3.0",
-		"@types/passport-jwt": "^3.0.8",
-		"@types/passport-local": "^1.0.35",
-		"@types/supertest": "^2.0.11",
-		"@typescript-eslint/eslint-plugin": "^5.0.0",
-		"@typescript-eslint/parser": "^5.0.0",
-		"axios": "^1.4.0",
-		"eslint": "^8.0.1",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-prettier": "^4.0.0",
-		"jest": "29.5.0",
-		"prettier": "^2.3.2",
-		"source-map-support": "^0.5.20",
-		"supertest": "^6.1.3",
-		"ts-jest": "29.1.0",
-		"ts-loader": "^9.2.3",
-		"ts-node": "^10.0.0",
-		"tsconfig-paths": "4.2.0",
-		"typescript": "^5.0.0"
-	},
-	"jest": {
-		"maxWorkers": 1,
-		"moduleFileExtensions": [
-			"js",
-			"json",
-			"ts"
-		],
-		"rootDir": ".",
-		"testRegex": ".*\\.(spec|e2e-spec)\\.ts$",
-		"transform": {
-			"^.+\\.(t|j)s$": "ts-jest"
-		},
-		"collectCoverageFrom": [
-			"**/*.(t|j)s"
-		],
-		"coverageDirectory": "./coverage",
-		"testEnvironment": "node",
-		"roots": [
-			"<rootDir>/src/",
-			"<rootDir>/libs/"
-		],
-		"moduleNameMapper": {
-			"^@open-press/config(|/.*)$": "<rootDir>/libs/config/src/$1",
-			"^@open-press/example-plugin(|/.*)$": "<rootDir>/libs/example-plugin/src/$1",
-			"^@open-press/models(|/.*)$": "<rootDir>/libs/models/src/$1",
-			"^@open-press/support(|/.*)$": "<rootDir>/libs/support/src/$1",
-			"^@open-press/utility(|/.*)$": "<rootDir>/libs/utility/src/$1",
-			"^@open-press/backend-interfaces(|/.*)$": "<rootDir>/libs/interfaces/src/$1"
-		}
-	}
+  "name": "@open-press/backend",
+  "version": "0.0.1",
+  "description": "",
+  "author": "",
+  "private": true,
+  "license": "UNLICENSED",
+  "type": "commonjs",
+  "scripts": {
+    "build": "nest build",
+    "build:example-plugin": "nest build example-plugin",
+    "format": "prettier --write \"src/**/*.ts\" \"libs/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "start:cli": "nest start cli -- seed",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest --forceExit",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage --forceExit",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
+  },
+  "dependencies": {
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.3",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.0.3",
+    "@nestjs/mapped-types": "^1.2.2",
+    "@nestjs/mongoose": "^9.2.2",
+    "@nestjs/passport": "^9.0.3",
+    "@nestjs/platform-express": "^9.0.0",
+    "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "jsonwebtoken": "^9.0.0",
+    "listr": "^0.14.3",
+    "lodash": "^4.17.21",
+    "luxon": "^3.3.0",
+    "mongoose": "^7.2.3",
+    "nest-commander": "^3.7.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.2.0",
+    "strongly-typed-events": "^3.0.9",
+    "tslib": "^2.5.3",
+    "winston": "^3.9.0",
+    "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
+    "@nestjs/cli": "^9.0.0",
+    "@nestjs/schematics": "^9.0.0",
+    "@nestjs/testing": "^9.0.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.13",
+    "@types/jest": "29.5.2",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/listr": "^0.14.4",
+    "@types/lodash": "^4.14.195",
+    "@types/luxon": "^3.3.0",
+    "@types/node": "20.3.0",
+    "@types/passport-jwt": "^3.0.8",
+    "@types/passport-local": "^1.0.35",
+    "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "axios": "^1.4.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "29.5.0",
+    "prettier": "^2.3.2",
+    "source-map-support": "^0.5.20",
+    "supertest": "^6.1.3",
+    "ts-jest": "29.1.0",
+    "ts-loader": "^9.2.3",
+    "ts-node": "^10.0.0",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "^5.0.0"
+  },
+  "jest": {
+    "maxWorkers": 1,
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": ".",
+    "testRegex": ".*\\.(spec|e2e-spec)\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "./coverage",
+    "testEnvironment": "node",
+    "roots": [
+      "<rootDir>/src/",
+      "<rootDir>/libs/"
+    ],
+    "moduleNameMapper": {
+      "^@open-press/config(|/.*)$": "<rootDir>/libs/config/src/$1",
+      "^@open-press/example-plugin(|/.*)$": "<rootDir>/libs/example-plugin/src/$1",
+      "^@open-press/models(|/.*)$": "<rootDir>/libs/models/src/$1",
+      "^@open-press/support(|/.*)$": "<rootDir>/libs/support/src/$1",
+      "^@open-press/utility(|/.*)$": "<rootDir>/libs/utility/src/$1",
+      "^@open-press/backend-interfaces(|/.*)$": "<rootDir>/libs/interfaces/src/$1"
+    }
+  }
 }
