feat: removed ste, added nest event emitter, cssnano, html-minifier

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "type": "commonjs",
   "scripts": {
     "build": "nest build",
-    "build:example-plugin": "nest build example-plugin",
-    "format": "prettier --write \"src/**/*.ts\" \"libs/**/*.ts\"",
+    "build:plugins": "nest start cli -- build",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -22,34 +22,37 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
-	  "@nestjs/common": "^9.0.0",
-	  "@nestjs/config": "^2.3.3",
-	  "@nestjs/core": "^9.0.0",
-	  "@nestjs/jwt": "^10.0.3",
-	  "@nestjs/mapped-types": "^1.2.2",
-	  "@nestjs/mongoose": "^9.2.2",
-	  "@nestjs/passport": "^9.0.3",
-	  "@nestjs/platform-express": "^9.0.0",
-	  "autoprefixer": "^10.4.14",
-	  "bcrypt": "^5.1.0",
-	  "class-transformer": "^0.5.1",
-	  "jsonwebtoken": "^9.0.0",
-	  "listr": "^0.14.3",
-	  "lodash": "^4.17.21",
-	  "luxon": "^3.3.0",
-	  "mongoose": "^7.2.3",
-	  "nest-commander": "^3.7.1",
-	  "passport": "^0.6.0",
-	  "passport-jwt": "^4.0.1",
-	  "passport-local": "^1.0.0",
-	  "postcss": "^8.4.24",
-	  "reflect-metadata": "^0.1.13",
-	  "rxjs": "^7.2.0",
-	  "strongly-typed-events": "^3.0.9",
-	  "tailwindcss": "^3.3.2",
-	  "tslib": "^2.5.3",
-	  "winston": "^3.9.0",
-	  "zod": "^3.21.4"
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.3",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/event-emitter": "^2.0.0",
+    "@nestjs/jwt": "^10.0.3",
+    "@nestjs/mapped-types": "^1.2.2",
+    "@nestjs/mongoose": "^9.2.2",
+    "@nestjs/passport": "^9.0.3",
+    "@nestjs/platform-express": "^9.0.0",
+    "autoprefixer": "^10.4.14",
+    "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "cssnano": "^6.0.1",
+    "html-minifier": "^4.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "listr": "^0.14.3",
+    "lodash": "^4.17.21",
+    "luxon": "^3.3.0",
+    "mongoose": "^7.2.3",
+    "nest-commander": "^3.7.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "postcss": "^8.4.24",
+    "postcss-cli": "^10.1.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.2.0",
+    "tailwindcss": "^3.3.2",
+    "tslib": "^2.5.3",
+    "winston": "^3.9.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
@@ -58,6 +61,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/html-minifier": "^4.0.2",
     "@types/jest": "29.5.2",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/listr": "^0.14.4",
