--- a/package.json
+++ b/package.json
@@ -22,30 +22,34 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/config": "^2.3.3",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/event-emitter": "^2.0.0",
-    "@nestjs/jwt": "^10.0.3",
-    "@nestjs/mapped-types": "^1.2.2",
-    "@nestjs/mongoose": "^9.2.2",
-    "@nestjs/passport": "^9.0.3",
-    "@nestjs/platform-express": "^9.0.0",
-    "autoprefixer": "^10.4.14",
-    "bcrypt": "^5.1.0",
-    "class-transformer": "^0.5.1",
-    "cssnano": "^6.0.1",
-    "html-minifier": "^4.0.0",
-    "jsonwebtoken": "^9.0.0",
-    "listr": "^0.14.3",
-    "lodash": "^4.17.21",
-    "luxon": "^3.3.0",
-    "mongoose": "^7.2.3",
-    "nest-commander": "^3.7.1",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0",
-    "postcss": "^8.4.24",
+	  "@nestjs/common": "^9.0.0",
+	  "@nestjs/config": "^2.3.3",
+	  "@nestjs/core": "^9.0.0",
+	  "@nestjs/event-emitter": "^2.0.0",
+	  "@nestjs/jwt": "^10.0.3",
+	  "@nestjs/mapped-types": "^1.2.2",
+	  "@nestjs/mongoose": "^9.2.2",
+	  "@nestjs/passport": "^9.0.3",
+	  "@nestjs/platform-express": "^9.0.0",
+	  "@tailwindcss/aspect-ratio": "^0.4.2",
+	  "@tailwindcss/forms": "^0.5.3",
+	  "@tailwindcss/typography": "^0.5.9",
+	  "autoprefixer": "^10.4.14",
+	  "bcrypt": "^5.1.0",
+	  "class-transformer": "^0.5.1",
+	  "cssnano": "^6.0.1",
+	  "html-minifier": "^4.0.0",
+	  "jsdom": "^22.1.0",
+	  "jsonwebtoken": "^9.0.0",
+	  "listr": "^0.14.3",
+	  "lodash": "^4.17.21",
+	  "luxon": "^3.3.0",
+	  "mongoose": "^7.2.3",
+	  "nest-commander": "^3.7.1",
+	  "passport": "^0.6.0",
+	  "passport-jwt": "^4.0.1",
+	  "passport-local": "^1.0.0",
+	  "postcss": "^8.4.24",
     "postcss-cli": "^10.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
@@ -55,24 +59,25 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.0.2",
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.13",
-    "@types/html-minifier": "^4.0.2",
-    "@types/jest": "29.5.2",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/listr": "^0.14.4",
-    "@types/lodash": "^4.14.195",
-    "@types/luxon": "^3.3.0",
-    "@types/node": "20.3.0",
-    "@types/passport-jwt": "^3.0.8",
-    "@types/passport-local": "^1.0.35",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
+	  "@faker-js/faker": "^8.0.2",
+	  "@nestjs/cli": "^9.0.0",
+	  "@nestjs/schematics": "^9.0.0",
+	  "@nestjs/testing": "^9.0.0",
+	  "@types/bcrypt": "^5.0.0",
+	  "@types/express": "^4.17.13",
+	  "@types/html-minifier": "^4.0.2",
+	  "@types/jest": "29.5.2",
+	  "@types/jsdom": "^21.1.1",
+	  "@types/jsonwebtoken": "^9.0.2",
+	  "@types/listr": "^0.14.4",
+	  "@types/lodash": "^4.14.195",
+	  "@types/luxon": "^3.3.0",
+	  "@types/node": "20.3.0",
+	  "@types/passport-jwt": "^3.0.8",
+	  "@types/passport-local": "^1.0.35",
+	  "@types/supertest": "^2.0.11",
+	  "@typescript-eslint/eslint-plugin": "^5.0.0",
+	  "@typescript-eslint/parser": "^5.0.0",
     "axios": "^1.4.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
