--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ DB_HOST=localhost
 DB_PORT=27017
 DB_USERNAME=root
 DB_PASSWORD=root
-DB_DATABASE=open-press
+DB_DATABASE=aetheria
 
 JWT_ENCRYPTION="symmetric"
 JWT_SECRET="example-secret-key"
