--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "@open-press/backend",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
-  "license": "UNLICENSED",
-  "type": "commonjs",
-  "scripts": {
-    "build": "nest build",
-    "build:plugins": "nest start cli -- build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"libs/**/*.ts\"",
+	"name": "@aetheria/backend",
+	"version": "0.0.1",
+	"description": "",
+	"author": "",
+	"private": true,
+	"license": "UNLICENSED",
+	"type": "commonjs",
+	"scripts": {
+		"build": "nest build",
+		"build:plugins": "nest start cli -- build",
+		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
