--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"start:dev": "nest start --watch",
 		"start:debug": "nest start --debug --watch",
 		"start:prod": "node dist/main",
-		"start:cli": "nest start cli -- seed",
+		"cli:seed": "nest start cli -- seed",
 		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
 		"test": "jest --forceExit",
 		"test:watch": "jest --watch",
@@ -37,6 +37,7 @@
 		"autoprefixer": "^10.4.14",
 		"bcrypt": "^5.1.0",
 		"class-transformer": "^0.5.1",
+		"cli-table3": "^0.6.3",
 		"cssnano": "^6.0.1",
 		"html-minifier": "^4.0.0",
 		"jsdom": "^22.1.0",
@@ -64,6 +65,7 @@
 		"@nestjs/schematics": "^9.0.0",
 		"@nestjs/testing": "^9.0.0",
 		"@types/bcrypt": "^5.0.0",
+		"@types/cli-table": "^0.3.1",
 		"@types/express": "^4.17.13",
 		"@types/html-minifier": "^4.0.2",
 		"@types/jest": "29.5.2",
