--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
 	"type": "commonjs",
 	"scripts": {
 		"build": "nest build",
-		"build:plugins": "nest start cli -- build",
 		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"libs/**/*.ts\"",
 		"start": "nest start",
 		"start:dev": "nest start --watch",
 		"start:debug": "nest start --debug --watch",
 		"start:prod": "node dist/main",
 		"cli:seed": "nest start cli -- seed",
+		"cli:build:plugins": "nest start cli -- plugin build",
 		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
 		"test": "jest --forceExit",
 		"test:watch": "jest --watch",
