--- a/libs/plugin-tailwind-classes-builder/package.json
+++ b/libs/plugin-tailwind-classes-builder/package.json
@@ -11,7 +11,7 @@
 		"email": "hello@override.sh",
 		"url": "https://override.sh"
 	},
-	"homepage": "https://aetheria-docs.override.sh/packages/support",
+	"homepage": "https://aetheria-docs.override.sh/plugins/tailwind-classes-builder",
 	"bugs": {
 		"url": "https://github.com/override-sh/aetheria-headless/issues"
 	},
