--- a/libs/config/package.json
+++ b/libs/config/package.json
@@ -1,46 +1,52 @@
 {
-	"name": "@aetheria/config",
-	"version": "1.0.0",
-	"type": "commonjs",
-	"description": "Aetheria Headless configuration parser",
-	"author": {
-		"name": "Override",
-		"email": "hello@override.sh",
-		"url": "https://override.sh"
-	},
-	"homepage": "https://aetheria-docs.override.sh/packages/support",
-	"bugs": {
-		"url": "https://github.com/override-sh/aetheria-headless/issues"
-	},
-	"license": "GPL-2.0",
-	"publishConfig": {
-		"access": "public",
-		"tag": "latest"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/override-sh/aetheria-headless.git",
-		"directory": "libs/config"
-	},
-	"keywords": [
-		"override",
-		"aetheria",
-		"headless",
-		"configuration",
-		"parser",
-		"es6",
-		"nestjs",
-		"nest",
-		"cms"
-	],
-	"exports": {
-		".": "./src/index.js",
-		"./package.json": "./package.json"
-	},
-	"dependencies": {
-		"@aetheria/backend-interfaces": "^1.0.0",
-		"@nestjs/config": "^3.0.0",
-		"tslib": "^2.5.3",
-		"zod": "^3.21.4"
-	}
+    "name": "@aetheria/config",
+    "version": "1.0.0",
+    "type": "commonjs",
+    "description": "Aetheria Headless configuration parser",
+    "author": {
+        "name": "Override",
+        "email": "hello@override.sh",
+        "url": "https://override.sh"
+    },
+    "homepage": "https://aetheria-docs.override.sh/packages/support",
+    "bugs": {
+        "url": "https://github.com/override-sh/aetheria-headless/issues"
+    },
+    "license": "GPL-2.0",
+    "publishConfig": {
+        "access": "public",
+        "tag": "latest"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/override-sh/aetheria-headless.git",
+        "directory": "libs/config"
+    },
+    "keywords": [
+        "override",
+        "aetheria",
+        "headless",
+        "configuration",
+        "parser",
+        "es6",
+        "nestjs",
+        "nest",
+        "cms"
+    ],
+    "exports": {
+        ".": "./src/index.js",
+        "./package.json": "./package.json"
+    },
+    "dependencies": {
+        "@aetheria/backend-interfaces": "^1.0.0",
+        "@nestjs/config": "^3.0.0",
+        "tslib": "^2.5.3",
+        "zod": "^3.21.4"
+    },
+    "aetheria": {
+        "assets": [
+            "README.md"
+        ],
+        "reference_commit": "c596a36b87c569316b4b1bac58426fad6b1e6ffd"
+    }
 }
