--- a/libs/config/package.json
+++ b/libs/config/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@aetheria/config",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "type": "commonjs",
     "description": "Aetheria Headless configuration parser",
     "author": {
@@ -8,7 +8,7 @@
         "email": "hello@override.sh",
         "url": "https://override.sh"
     },
-    "homepage": "https://aetheria-docs.override.sh/packages/support",
+    "homepage": "https://aetheria-docs.override.sh/packages/config",
     "bugs": {
         "url": "https://github.com/override-sh/aetheria-headless/issues"
     },
