--- a/libs/interfaces/package.json
+++ b/libs/interfaces/package.json
@@ -8,7 +8,7 @@
         "email": "hello@override.sh",
         "url": "https://override.sh"
     },
-    "homepage": "https://aetheria-docs.override.sh/packages/support",
+    "homepage": "https://aetheria-docs.override.sh/packages/backend-interfaces",
     "bugs": {
         "url": "https://github.com/override-sh/aetheria-headless/issues"
     },
