--- a/libs/plugin-example/package.json
+++ b/libs/plugin-example/package.json
@@ -2,7 +2,10 @@
 	"name": "@aetheria/plugin-example",
 	"version": "1.0.0",
 	"aetheria": {
-		"assets": []
+		"assets": [
+			"README.md"
+		],
+		"reference_commit": "963158a75dd1830f33ec49612bdba1fe02cada43"
 	},
 	"type": "commonjs",
 	"description": "Aetheria example plugin",
@@ -11,7 +14,7 @@
 		"email": "hello@override.sh",
 		"url": "https://override.sh"
 	},
-	"homepage": "https://aetheria-docs.override.sh/packages/support",
+	"homepage": "https://aetheria-docs.override.sh/packages/plugin-example",
 	"bugs": {
 		"url": "https://github.com/override-sh/aetheria-headless/issues"
 	},
