--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,9 @@
 		"strictBindCallApply": true,
 		"forceConsistentCasingInFileNames": true,
 		"noFallthroughCasesInSwitch": true,
+		"lib": [
+			"ESNext"
+		],
 		"paths": {
 			"@aetheria/backend-interfaces": [
 				"libs/interfaces/src"
