refactor: dead cli removal

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,5 @@ DB_USERNAME=root
 DB_PASSWORD=root
 DB_DATABASE=aetheria
 
-JWT_ENCRYPTION="symmetric"
-JWT_SECRET="example-secret-key"
+JWT_ENCRYPTION=symmetric
+JWT_SECRET=example-secret-key
